[package]
name = "switchboard_function"
# swapped name from "switchboard_function"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "randomness_callback"
path = "src/main.rs"

[dependencies]
tokio = "^1"
futures = "0.3"
switchboard-solana = { version = "=0.29.71", features = ["macros"] }
bytemuck = "1.13"
